--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>聊天系统</title>
-    <meta name="keywords" content="聊天系统">
-    <meta name="description" content="聊天系统登录页面">
+    <title>二十一天聊天室</title>
+    <meta name="keywords" content="聊天、登录、深圳二十一天健康科技聊天室">
+    <meta name="description" content="二十一天在线聊天系统登录页面">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="Author" content="larry">
@@ -22,7 +22,7 @@
 </head>
 <body>
 <div class="larry-main layui-layout animated shake larry-delay2" id="larry_login" style="margin-top: 94px;">
-    <div class="title">聊天系统</div>
+    <div class="title">在线聊天系统</div>
     <p class="info">统一后台登录中心</p>
     <div class="user-info">
         <div class="avatar"><img src="../../images/admin.png" alt=""></div>
