--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,9 +12,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="../css/layui.css" media="all"/>
-    <link rel="stylesheet" href="../css/animate.css" media="all"/>
-    <link rel="stylesheet" href="../css/login.css" media="all"/>
+    <link rel="stylesheet" href="css/layui.css" media="all"/>
+    <link rel="stylesheet" href="css/animate.css" media="all"/>
+    <link rel="stylesheet" href="css/login.css" media="all"/>
     <script>
         /*检测用户的浏览器是不是ie678版本的*/
         (function(w){if(!("WebSocket"in w&&2===w.WebSocket.CLOSING)){var d=document.createElement("div");d.className="browsehappy";d.innerHTML='<div style="width:100%;height:100px;font-size:20px;line-height:100px;text-align:center;background-color:#E90D24;color:#fff;margin-bottom:40px;">\u6d4f\u89c8\u5668\u7248\u672c\u8fc7\u4f4e\uff0c\u53ef\u80fd\u4f1a\u5f71\u54cd\u60a8\u7684\u6b63\u5e38\u4f7f\u7528\u3002<a target="_blank" href="http://browsehappy.osfipin.com/" style="background-color:#31b0d5;border-color: #269abc;text-decoration: none;padding: 6px 12px;background-image: none;border: 1px solid transparent;border-radius: 4px;color:#FFEB3B;">\u7acb\u5373\u5347\u7ea7</a></div>';var f=function(){var s=document.getElementsByTagName("body")[0];if("undefined"==typeof(s)){setTimeout(f,10)}else{s.insertBefore(d,s.firstChild)}};f()}}(window));
@@ -25,7 +25,7 @@
     <div class="title">在线聊天系统</div>
     <p class="info">统一后台登录中心</p>
     <div class="user-info">
-        <div class="avatar"><img src="../../images/admin.png" alt=""></div>
+        <div class="avatar"><img src="images/admin.png" alt=""></div>
         <form class="layui-form" id="larry_form" method="post">
             <div class="layui-form-item">
                 <label class="layui-form-label">账号:</label>
@@ -40,20 +40,20 @@
             </div>
         </form>
     </div>
-    <div class="copy-right">&copy;2018 广州赋能科技有限公司</div>
+    <div class="copy-right">&copy;2018 深圳二十一天健康科技有限公司</div>
 </div>
 <div class="layui-layer-move"></div>
 <ul id="supersized" class="quality" style="visibility: visible;">
     <li class="slide-1 activeslide" style="visibility: visible; opacity: 1;">
         <a target="_blank">
-            <img src="../../images/bg.jpg" style="width: 100%; left: 0px; top: 0px; height: 100%;">
+            <img src="images/bg.jpg" style="width: 100%; left: 0px; top: 0px; height: 100%;">
         </a>
     </li>
 </ul>
 </div>
-<script type="text/javascript" src="../jquery-1.12.0.min.js"></script>
-<script type="text/javascript" src="../public.js"></script>
-<script type="text/javascript" src="../layui.js" ></script>
+<script type="text/javascript" src="jquery-1.12.0.min.js"></script>
+<script type="text/javascript" src="public.js"></script>
+<script type="text/javascript" src="layui.js" ></script>
 <script>
     var layer;
     layui.use('layer', function(){
@@ -76,26 +76,16 @@
             var user=new Object();
             user.number=$("#txtNumber").val();
             user.password=$("#txtPwd").val();
-            doData("/login",user,function (result) {
+            doData("login",user,function (result) {
                 switch (parseInt(result.code))
                 {
                     case 100:
-                        $("#txtCode").val("");
                         layer.msg(result.message,{offset: 'c',icon: 5,anim: 6});
-                        break;
-                    case 700:
-                        $("#txtNumber").val("");
-                        $("#txtPwd").val("");
-                        $("#txtCode").val("");
-                        layer.msg(result.message,{offset: 'c',icon: 5,anim: 6});
-                        break;
-                    case 500:
-                        layer.msg("当前账号已经锁定，无法使用！",{offset: 'c',icon: 5,anim: 6});
                         break;
                     case 200:
                         $("#txtNumber").val("");
                         $("#txtPwd").val("");
-                        location.href="/Cvisit/index/"+result.username;
+                        location.href="Cvisit/index/"+result.username;
                         break;
                     default:
                         layer.msg("系统登录异常",{offset: 'c',icon: 5,anim: 6});
